2015-08-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* A first version of catching singular matrices in the SVD

2015-08-13  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Reverted unintended commit of hack.

	* Added very basic prof-config script to bin
	
	* Update PATH when sourcing setup.sh

2015-08-12  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added prof-prediction which reads in a ifile and a point in
	parameter space (either a text file, a comma separated list or just
	the args) and writes out an ipolhisto. Tested to work.

2015-08-03  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added 0-order polynomials, i.e. constant values.
	Currently, the coefficent is simply the value of
	the first anochorpoint.

2015-07-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Some pull plotting functionality

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Calculate and print G.o.f.
	
	* Write some meta info to results

	* Read limits, fixed params from single textfile --limits

	* Output files steered by --output
	
	* Remove now obsolete bin/prof-interpolate
	

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* First working version of prof-tune (pyminuit, simpleGOF)

	* Multiprocessing to speed up prof-ipol (--multi)

	* prof-ipol-tabulated to write out interpolation of tabulated data
	
	* Minor bugfixes


2015-06-16  Andy Buckley  <andy.buckley@cern.ch>

	* Adding mean and median strategies for assigning constant ipol bin errors.

2015-06-03  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a Bin base class in the Python side, and a coherent handling of multiple (interpolated) bin errors.

	* Various tweaks and minor fixes.

2015-05-10  Andy Buckley  <andy.buckley@cern.ch>

	* Add 'Minuit' class importing to the __init__.py file.

2015-05-05  Andy Buckley  <andy.buckley@cern.ch>

	* Rewrite C++ ipolstring parsing using STL string functions rather than Boost: shorter! Boost dependency GONE :-)
