@@ -1,6 +1,9 @@
 2015-08-15  Holger Schulz  <holger.schulz@durham.ac.uk>
 
 	* A first version of catching singular matrices in the SVD
+	
+	* Ipol has 1 additional argument, "threshold", that determines what
+	singular values are considered 0, fully propagated to pyext
 
 2015-08-13  Holger Schulz  <holger.schulz@durham.ac.uk>
 
